# topo-metrics

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yaml  publish.yaml  tests.yaml
docs/source/: conf.py  hide-title.html  index.rst
docs/source/_autoapi/: index.rst
docs/source/_autoapi/topo_metrics/: index.rst
docs/source/_autoapi/topo_metrics/analysis/: index.rst
docs/source/_autoapi/topo_metrics/clusters/: index.rst
docs/source/_autoapi/topo_metrics/io/: index.rst
docs/source/_autoapi/topo_metrics/io/cgd/: index.rst
docs/source/_autoapi/topo_metrics/io/conflink/: index.rst
docs/source/_autoapi/topo_metrics/io/lmp/: index.rst
docs/source/_autoapi/topo_metrics/knots/: index.rst
docs/source/_autoapi/topo_metrics/neighbours/: index.rst
docs/source/_autoapi/topo_metrics/paths/: index.rst
docs/source/_autoapi/topo_metrics/ring_geometry/: index.rst
docs/source/_autoapi/topo_metrics/rings/: index.rst
docs/source/_autoapi/topo_metrics/symbols/: index.rst
docs/source/_autoapi/topo_metrics/topology/: index.rst
docs/source/_autoapi/topo_metrics/utils/: index.rst
docs/source/_static/: custom-icons.js  custom.css
docs/source/_templates/: announcement.html
docs/source/basics/: graphs_and_nets.rst  periodic_nets_and_quotient_graphs.rst  rings_and_cycles.rst  root.rst  vertex_symbols.rst
docs/source/examples/: entangled_networks.ipynb  entlangled_networks.ipynb  index.rst  quickstart.ipynb
docs/source/examples/configs/: hopf.data  lk_1.data  lk_2.data  lk_3.data  separate.data
docs/source/examples/data/: alpha-quartz.cif
examples/: alpha_cristobalite.py  fmt.py  main.py
examples/data/: SOD.cif  amorphous-si-gap18.cgd  zif-coi.cgd
notebooks/: quickstart.ipynb
src/topo_metrics/: __init__.py  _julia_wrappers.py  clusters.py  hatch_build.py  knots.py  neighbours.py  paths.py  ring_geometry.py  rings.py  symbols.py  topology.py  utils.py
src/topo_metrics/RingStatistics/: Manifest.toml  Project.toml
src/topo_metrics/RingStatistics/src/: Knots.jl  RingStatistics.jl  precompile.jl
src/topo_metrics/analysis/: __init__.py  _distribution.py  _style.py
src/topo_metrics/io/: cgd.py  conflink.py  lammps_data.py  lmp.py
tests/: conftest.py  test_clusters.py  test_io.py  test_knots.py  test_neighbours.py  test_node.py  test_ring_geometry.py  test_rings.py  test_symbols.py  test_topology.py  test_utils.py
tests/data/: alpha-cristobalite.cgd
